--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,10 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
+body:has(.page) {
+    overflow:hidden;
+}
+
 @keyframes rotate {
     0% {
         transform: rotate(0deg)
     }
+
     100% {
         transform: rotate(360deg)
     }
@@ -15,15 +20,19 @@
     0% {
         transform: scale(1)
     }
+
     25% {
         transform: scale(1.1)
     }
+
     50% {
         transform: scale(1)
     }
+
     75% {
         transform: scale(1.1)
     }
+
     100% {
         transform: scale(1)
     }
@@ -46,4 +55,32 @@ body {
     background-image:
         linear-gradient(to right, rgba(255, 255, 255, .05) 1px, transparent 1px),
         linear-gradient(to bottom, rgba(255, 255, 255, .05) 1px, transparent 1px);
+}
+
+.skeleton {
+    background-color: #1a1a1a;
+    position: relative;
+    overflow: hidden;
+}
+
+@keyframes skeleton {
+    0% {
+        left: -100%;
+    }
+
+    100% {
+        left: 100%;
+    }
+
+}
+
+.skeleton::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: -100%;
+    width: 50%;
+    height: 100%;
+    background: linear-gradient(to right, transparent 0%, rgba(255, 255, 255, 0.05) 50%, transparent 100%);
+    animation: skeleton 3s infinite linear;
 }
